# hamlogmap

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  app.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  gunicorn_config.py  populate_redis.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: python-app.yml
qsomap/: __init__.py  handlers.py  upload.py
qsomap/common/: callinfo_provider.py  grid_validator.py  log_reader.py
qsomap/static/css/: style.css
qsomap/static/ham-wrapped/: index.html
qsomap/static/ham-wrapped/css/: styles.css
qsomap/static/ham-wrapped/js/: adif-parser.js  app.js  callsign-lookup.js  dxcc-data.js  i18n.js  presentation.js  statistics.js  url-share.js
qsomap/static/js/: map.js
qsomap/templates/: base.html  error.html  main.html  map.html  qso_list.html
qsomap/utils/: version.py
tests/: __init__.py  conftest.py  test_distance_calculation.py  test_file_validation.py  test_flask_app.py  test_grid_validator.py  test_input_sanitization.py  test_log_reader.py  test_standalone.py
