[project]
name = "hamlogmap"
version = "1.0.0"
description = "Ham Radio Log Map Visualizer"
authors = [
    { name = "SP3WKW", email = "sp3wkw@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.1.0",
    "requests==2.32.3",
    "Werkzeug==3.1.3",
    "Jinja2==3.1.4",
    "click==8.1.7",
    "itsdangerous==2.2.0",
    "MarkupSafe==3.0.2",
    "urllib3==2.1.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "idna==3.6",
    "adif_io==0.5.3",
    "pyhamtools",
    "sentry-sdk[flask]",
]

[project.optional-dependencies]
dev = [
    "ipdb",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "flake8",
]
prod = [
    "gunicorn==23.0.0",
]

[dependency-groups]
dev = [
    "ipdb",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qsomap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
